--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @INPROCEEDINGS{grebe,
 bibtex_show={true},
 abbr={S&P},
-author = {Lin, Zhenpeng and Chen, Yueqi and Wu, Yuhang and Yu, Chensheng and Mu, Dongliang and Xing, Xinyu and Li, Kang},
+author = {Lin, Zhenpeng and Chen, Yueqi and **Wu, Yuhang** and Yu, Chensheng and Mu, Dongliang and Xing, Xinyu and Li, Kang},
 booktitle = {Proceedings of the 2022 IEEE Symposium on Security and Privacy},
 title = {GREBE: Unveiling Exploitation Potential for Linux Kernel Bugs},
 year = {2022},
