--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,3 +34,14 @@ code = {https://github.com/Markakd/GREBE}
   selected = {true},
   pdf = {https://zplin.me/papers/DirtyCred.pdf}
 }
+
+@INPROCEEDINGS{handbookforctfers,
+  bibtex_show={true},
+  abbr={Book},
+  title={Handbook for CTFers},
+  author={Nu1L Team},
+  booktitle={Handbook for CTFers},
+  year = {2020},
+  pdf = {https://link.springer.com/book/10.1007/978-981-19-0336-6},
+  selected = {true}
+}
