--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,15 @@
 ---
 ---
+@inproceedings{klaus,
+  bibtex_show={true},
+  abbr={Usenix},
+  author = {Yuhang Wu and Zhenpeng Lin and Yueqi Chen and Dang K Le and Dongliang Mu and Xinyu Xing},
+  title = {Mitigating Security Risks in Linux with {KLAUS}: A Method for Evaluating Patch Correctness},
+  booktitle = {32nd USENIX Security Symposium (USENIX Security 23)},
+  year = {2023},
+  selected = {true},
+  pdf = {https://www.usenix.org/system/files/usenixsecurity23-wu-yuhang.pdf}
+}
 
 @INPROCEEDINGS{grebe,
 bibtex_show={true},
