--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
   booktitle = {32nd USENIX Security Symposium (USENIX Security 23)},
   year = {2023},
   selected = {true},
-  pdf = {https://www.usenix.org/system/files/usenixsecurity23-wu-yuhang.pdf}
+  pdf = {https://www.usenix.org/system/files/usenixsecurity23-wu-yuhang.pdf},
+  code = {https://github.com/wupco/KLAUS}
 }
 
 @INPROCEEDINGS{grebe,
